---
config:
  layout: elk
  theme: default
  look: neo
---
classDiagram
direction TB
    class File {
	    -inputFile: string
	    -outputFolder: string
	    +File()
	    +setInputFile(filename: string)
	    +createOutputFolder()
	    +writeFile(grid: Grid, generation: int)
	    +readGrid(ruleSet: RuleSet#42;) Grid
    }

    class GridTester {
	    +testGrid(initialGrid: Grid, expectedGrid: Grid, iterations: int) bool
	    +runAllTests() void
    }

    class ConsoleDisplay {
	    -outputFolder: string
	    +ConsoleDisplay(folder: const string&)
	    +displayGrid(grid: Grid&) void
	    +isOpen() bool
	    +handleEvents() void
    }

    class GameOfLife {
	    -mode: int
	    -grid: Grid
	    -display: Display#42;
	    -window: RenderWindow#42;
	    -file: File
	    -delay: int
	    -maxGenerations: int
	    -generation: int
	    -previousGrid: string
	    +GameOfLife()
	    +~GameOfLife()
	    +setFile(filename: string)
	    +setDelay(ms: int)
	    +setMaxGenerations(max: int)
	    +setMode(mode: int)
	    +setToric(toric: bool)
	    +start()
	    -checkStability() bool
    }

    class Cell {
	    -state: CellState#42;
	    -nextState: CellState#42;
	    -fixed: bool
	    -x: int
	    -y: int
	    +Cell()
	    +Cell(x: int, y: int)
	    +~Cell()
	    +initialize(x: int, y: int)
	    +setState(state: CellState#42;)
	    +prepareNextState(state: CellState#42;)
	    +applyNextState()
	    +isAlive() bool
	    +getX() int
	    +getY() int
	    +getState() CellState#42;
	    +setFixed(fixed: bool)
	    +isFixed() bool
    }

    class Grid {
	    -width: size_t
	    -height: size_t
	    -cells: vector~Cell~
	    -toric: bool
	    -ruleSet: RuleSet#42;
	    +Grid()
	    +Grid(width: size_t, height: size_t, RuleSet* rules)
	    +Grid(other: Grid&)
	    +operator=(other: Grid&)
	    +~Grid()
	    +setSize(width: size_t, height: size_t)
	    +update()
	    +countNeighbors(x: int, y: int) size_t
	    +getCell(x: int, y: int) Cell&
	    +getWidth() int
	    +getHeight() int
	    +isToric() bool
	    +setToric(toric: bool)
	    +textGrid() string
	    +setRuleSet(rules: RuleSet*)
    }

    class RuleSet {
	    +~RuleSet()
	    +calculateNextState(currentlyAlive: bool, neighbors: int) CellState#42;
    }

    class ConwayRuleSet {
	    +calculateNextState(currentlyAlive: bool, neighbors: int) CellState#42;
    }

    class GraphicalDisplay {
	    -cellSize: int
	    -window: RenderWindow#42;
	    -delay: int
	    +GraphicalDisplay(width: int, height: int, cellSize: int)
	    +~GraphicalDisplay()
	    +displayGrid(grid: Grid&) void
	    +setDelay(ms: int)
	    +isOpen() bool
	    +handleEvents() void
	    +getWindow() RenderWindow#42;
    }

    class Display {
	    +displayGrid(grid: Grid&) void#42;
	    +isOpen() bool#42;
	    +handleEvents() void#42;
	    +~Display()
    }

    class DeadState {
	    +isAlive() bool
	    +clone() CellState#42;
	    +toChar() char
    }

    class AliveState {
	    +isAlive() bool
	    +clone() CellState#42;
	    +toChar() char
    }

    class CellState {
	    +isAlive() bool
	    +clone() CellState#42;
	    +toChar() char
        +~CellState()        
    }

	<<abstract>> RuleSet
	<<abstract>> Display
	<<abstract>> CellState

    GameOfLife o-- Grid : manages
    GameOfLife o-- Display : uses
    GameOfLife o-- File : uses
    Display <|-- ConsoleDisplay : inherits
    Display <|-- GraphicalDisplay : inherits
    Grid *-- Cell : contains
    Grid o-- RuleSet : uses
    Cell o-- CellState : current state
    Cell o-- CellState : next state
    CellState <|-- AliveState : inherits
    CellState <|-- DeadState : inherits
    RuleSet <|-- ConwayRuleSet : inherits
    GridTester ..> Grid : tests